--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
-sdk.dir=C\:\\Users\\bharg\\AppData\\Local\\Android\\Sdk
+sdk.dir=C:\Users\bharg\AppData\Local\Android\Sdk
